src/components/styles/main.css
@import '_normalize.css';

* {
  box-sizing: border-box;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: #333333;
}

.center {
  text-align: center;
}

.wrapper {
  width: 90%;
  margin: 0 auto;
  max-width: 100%;
}

#table {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto 1fr;
}

/* Temporarily hide these for now */
#table-extra {
  display: none;
}

/* Every element box  */
.element {
  cursor: pointer;
  width: 5vw;
  height: 5vw;

  padding: 2px;
  border: 1px solid #333333;
  border-collapse: collapse;
  overflow: hidden;
}

.number {
  float: left;
  font-size: 0.5vw;
  position: absolute;
}

.symbol {
  font-weight: bold;
  text-align: center;
  margin-top: 0.5vw;
  font-size: 2.5vw;
}

.element-name {
  font-size: 0.8vw;
  text-align: center;
}

#element-box .symbol {
  font-size: 5vw;
}

#element-box .number {
  font-size: 1vw;
}

#element-box .element-name {
  font-size: 1.5vw;
}

#element-box {
  grid-column: 3/5;
  grid-row: 2/4;
  margin: 0;
  padding: 0.2vw;
  overflow: hidden;
  /* border-top: 2px solid #cccccc;
  border-right: 2px solid #cccccc;
  border-left: 1px solid #cccccc;
  border-bottom: 1px solid #cccccc; */
}

/* Information Table  */
#information {
  grid-column: 5/13;
  grid-row: 2/4;
  padding: 0.5vw;
  padding-top: 0;
  font-size: 1vw;
}

#information h1 {
  margin: 0 0 0.5vw 0;
}

.close-button {
  float: right;
  cursor: pointer;
  color: #cccccc;
}

.close-button:hover {
  color: #333333;
}

.appearance {
  font-style: italic;
  margin-bottom: 0.5vw;
}

/* Helium to the top right  */
.element-2 {
  grid-column-start: -2;
}

/* Boron & Alumunium to the right  */
.element-5,
.element-13 {
  grid-column-start: 13;
}

/* Not needed anymore since I decided to fill them with first elements */

/* .element-72,
.element-104 {
  grid-column-start: 4;
} */

/* Lanthinide & Actinoid split  */
.element-58,
.element-90 {
  grid-column-start: 3;
}

/* Categories and Groups */

/* Noble Gas  */
.noble {
  background: #f3d2e8;
}

/* Alkali Metal  */
.alkali {
  background: #f88379;
}

/* Alkaline Earth Metal  */
.alkaline {
  background: #ffc3a0;
}

/* Transition Metal  */
.transition {
  background: #e9ff08;
}

/* Polyatomic Non Metal  */
.polyatomic {
  background: #a3d2d5;
}

/* Diatomic Non Metal  */
.diatomic {
  background: #a3d5bf;
}

/* Post Transition Metal  */
.post-transition {
  background: #8eb1e7;
}

/* Metalloid  */
.metalloid {
  background: #5ed89c;
}

/* Lanthanide  */
.lanthanide {
  background: #cc99ff;
  /* Put a space to seperate the split table  */
  margin-top: 2.5vw;
}

/* Actinide  */
.actinide {
  background: #ad87bd;
}

/* Disable the top space for the first lathenide which sits inside the table  */
.element-57 {
  margin: 0;
}

/* When in the hover state  */
.active {
  background: #fff;
  /* border-color: yellow; */
}

